# cpp-mainer

./: README.md
1-year-cpp-examples/01-cmake/01-hello-world/: CMakeLists.txt
1-year-cpp-examples/01-cmake/02-cps/: CMakePresets.json
1-year-cpp-examples/01-cmake/02-cps/src/libsolver/: CMakeLists.txt
1-year-cpp-examples/01-cmake/02-cps/src/libsolver/libsolver/: sqrt.cpp
1-year-cpp-examples/02-intro/src/: 02-ci_string.cpp  03-map-traverse.cpp
1-year-cpp-examples/03-warnings/: CMakeLists.txt
1-year-cpp-examples/03-warnings/src/: 01-zero-length-array.cpp
1-year-cpp-examples/11-ffi/01-asm-to-asm/: .gitignore
1-year-cpp-examples/11-ffi/01-asm-to-asm/src/: sum.s
1-year-cpp-examples/11-ffi/02-asm-to-c/: Makefile
1-year-cpp-examples/11-ffi/02-asm-to-c/src/: main.c
1-year-cpp-examples/11-ffi/04-c-to-rust/: .gitignore  Makefile
1-year-cpp-examples/11-ffi/05-cpp-to-c/: Makefile
1-year-cpp-examples/11-ffi/05-cpp-to-c/src/: sum.c
1-year-cpp-examples/11-ffi/06-py-to-cpp-voidp/client/: main.py
1-year-cpp-examples/11-ffi/06-py-to-cpp-voidp/src/: CMakeLists.txt
1-year-cpp-examples/11-ffi/06-py-to-cpp-voidp/src/libgeometry-c/: CMakeLists.txt
1-year-cpp-examples/11-ffi/06-py-to-cpp-voidp/src/libgeometry-c/libgeometry-c/: Circle.cpp  geometry.h
1-year-cpp-examples/12-binary/01-readwrite-examples/: CMakePresets.json
1-year-cpp-examples/12-binary/01-readwrite-examples/src/: 01-simple-types.cpp  02-aligned.cpp  04-complex-types.cpp  05-utils.cpp  binary.hpp  dump.hpp
cpp-examples/01-cmake/01-hello-world/: CMakePresets.json
cpp-examples/01-cmake/01-hello-world/src/: main.cpp
cpp-examples/01-cmake/02-cps/: .clang-format  .clang-tidy  CMakeLists.txt
cpp-examples/01-cmake/02-cps/src/: CMakeLists.txt
cpp-examples/01-cmake/02-cps/src/libsolver/libsolver/: sqrt.hpp
cpp-examples/02-intro/: CMakeLists.txt
cpp-examples/02-intro/cmake/: CompileOptions.cmake
cpp-examples/02-intro/src/: 01-macro-vs-template.cpp
cpp-examples/03-warnings/: .clang-format
cpp-examples/03-warnings/cmake/: CompileOptions.cmake
cpp-examples/03-warnings/src/: 02-false-positive-effc++.cpp
cpp-examples/09-encodings/: CMakeLists.txt
cpp-examples/09-encodings/src/: encodings.cpp
cpp-examples/11-ffi/01-asm-to-asm/: Makefile  run.sh
cpp-examples/11-ffi/02-asm-to-c/: .gitignore
cpp-examples/11-ffi/03-c-to-pascal/: .gitignore  Makefile
cpp-examples/11-ffi/03-c-to-pascal/src/: main.c  math.pas  mystring.pas
cpp-examples/11-ffi/04-c-to-rust/rust/: Cargo.toml
cpp-examples/11-ffi/04-c-to-rust/src/: main.c
cpp-examples/11-ffi/05-cpp-to-c/src/: main.cpp  (+1 more)
cpp-examples/11-ffi/06-py-to-cpp-voidp/: CMakeLists.txt
cpp-examples/11-ffi/06-py-to-cpp-voidp/src/libgeometry/: CMakeLists.txt
cpp-examples/11-ffi/06-py-to-cpp-voidp/src/libgeometry/libgeometry/: Circle.cpp  Point.hpp
cpp-examples/11-ffi/07-py-to-cpp-opaque/src/testapp/: CMakeLists.txt
cpp-examples/12-binary/01-readwrite-examples/: CMakeLists.txt
cpp-examples/12-binary/01-readwrite-examples/cmake/: CompileOptions.cmake
cpp-examples/12-binary/01-readwrite-examples/src/: 03-wrong-unaligned-write.cpp  06-tlv.cpp
cpp-examples/12-binary/02-grayscale/: CMakeLists.txt
cpp-examples/12-binary/02-grayscale/src/grayscale/: CMakeLists.txt
cpp-examples/14-three-way-comparison/: .clang-format  CMakeLists.txt
cpp-examples/14-three-way-comparison/cmake/: CompileOptions.cmake
cpp-examples/14-three-way-comparison/src/: 01-string-strcmp.cpp  02-string-handwritten.cpp
cpp-hashmap-cw/: .clang-tidy  .gitignore  CMakeLists.txt  cpp_report_is-042_ryabov.odt
cpp-hashmap-cw/cmake/: CompileOptions.cmake
cpp-hashmap-cw/src/libcsc/libcsc/: CMakeLists.txt  absolutepath.hpp.in
cpp-hashmap-cw/src/libcsc/libcsc/hashmap/: hashmap.hpp
cpp-hashmap-cw/tests/libcsc/: CMakeLists.txt
cpp-hashmap-cw/tests/libcsc/libcsc/: hashmap.cpp
cpp-labs-spring/: .clang-tidy  CMakeLists.txt  names2020.csv
cpp-labs-spring/src/: CMakeLists.txt
cpp-labs-spring/src/libcsc/: CMakeLists.txt
cpp-labs-spring/src/libcsc/libcsc/: CMakeLists.txt
cpp-labs-spring/src/libcsc/libcsc/forwardlist/: forward_list.hpp
cpp-labs-spring/src/libcsc/libcsc/smartptr/: SharedPtr.hpp  UniquePtr.hpp
cpp-labs-spring/src/libcsc/libcsc/soundex/: soundex.cpp  soundex.hpp
cpp-labs-spring/src/libcsc/libcsc/time/: time.cpp  time.hpp
cpp-labs-spring/src/soundex_groupby/: CMakeLists.txt
cpp-labs-spring/src/soundex_groupby/soundex_groupby/: CMakeLists.txt  main.cpp
cpp-labs-spring/tests/libcsc/: CMakeLists.txt
cpp-labs-spring/tests/libcsc/libcsc/: forward_list.cpp  smartptr.cpp  soundex.cpp  time.cpp
freq-dict/: .clang-format  CMakeLists.txt  Main.java  main.cpp  main.php  plots.ipynb  robin_hood.h  time_results.csv
fts-example-first/: .gitmodules  CMakeLists.txt  CMakePresets.json
fts-example-first/client/: main.go
fts-example-first/cmake/: CompileOptions.cmake
fts-example-first/src/app/: searcher.cpp
fts-example-first/src/libfts/: indexer.cpp  indexer.hpp  parser.hpp  searcher.cpp  searcher.test.cpp
fts-example-first/src/libfts-c/: parser.h  searcher.cpp
fts-example-one/: .clang-format  .clang-tidy  .gitignore  books.csv  config.json  launchSearcher.sh
fts-example-one/client/: searcher.go
fts-example-one/src/: CMakeLists.txt
fts-example-one/src/app/: indexer.cpp
fts-example-one/src/libfts/: indexer.test.cpp  parser.cpp  parser.test.cpp  searcher.hpp
fts-example-one/src/libfts-c/: parser.cpp  searcher.h
fts-example-second/: .clang-format  .clang-tidy  CMakeLists.txt  ParserConfig.json  README.md
fts-example-second/client/: libfts.py  main.py
fts-example-second/cmake/: CompileOptions.cmake
fts-example-second/include/c-api/: parser.h  searcher.h
fts-example-second/include/libfts/: indexer.hpp  parser.hpp  searcher.hpp
fts-example-second/src/: CMakeLists.txt
fts-example-second/src/app/: CMakeLists.txt  main.cpp
fts-example-second/src/c-api/: CMakeLists.txt  parser.cpp  searcher.cpp
fts-example-second/src/libfts/: CMakeLists.txt  indexer.cpp  indexer.test.cpp  parser.cpp  parser.test.cpp  searcher.cpp  searcher.test.cpp
(+22 files in other folders)
